# summarize_rpg_session

./: .gitignore  CLAUDE.md  README.md  hello.py  product_requirements.md  pyproject.toml  pytest.ini  summarize_rpg_session.py  technical_requirements.md  transcription.py
tests/: __init__.py  conftest.py  test_cli.py  test_transcription.py  test_transcription_integration.py
